plugins {
    id('com.gradleup.shadow') version '9.2.2'
}

repositories {
    maven { url = 'https://repo.opencollab.dev/main' }
}

dependencies {
    compileOnly project(":api")
    compileOnly project(":flows")

    compileOnly 'org.geysermc.floodgate:api:2.2.2-SNAPSHOT'
    compileOnly 'org.geysermc.geyser:api:2.2.0-SNAPSHOT'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

shadowJar {
    archiveFileName = 'MultiLogin-Core.JarFile'
}

artifacts {
    archives shadowJar
}